objects/Kit_Products__c.object
<CustomObject>
    <description>Junction Object used to relate Kit parts by revision to their Component Parts. Makes use of a combined unique key for data integrity.</description>
    <fields>
        <fullName>Kit_Product_Code__c</fullName>
        <formula>PT_Kit_Part__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Kit Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_ExternalId__c</fullName>
        <description>Uniqueness value to ensure that data is loaded accurately. Record load will fail if this is not unique. Should be a composite of the Kit Inventory ID, the Component Inventory ID, and the Revision Code.</description>
        <externalId>true</externalId>
        <inlineHelpText>Uniqueness value to ensure that data is loaded accurately. Record load will fail if this is not unique. Should be a composite of the Kit Inventory ID, the Component Inventory ID, and the Revision Code.</inlineHelpText>
        <label>ExternalId</label>
        <length>120</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PT_Component_Part_Code__c</fullName>
        <formula>PT_Component_Part__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Component Part Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Component_Part_Quantity__c</fullName>
        <label>Component Part Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PT_Component_Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product lookup that represents the part of a component within a kit</description>
        <inlineHelpText>Product lookup that represents the part of a component within a kit</inlineHelpText>
        <label>Component Part</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Kit Products (Component Part)</relationshipLabel>
        <relationshipName>Kit_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PT_Kit_Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product lookup that represents the Kit part number</description>
        <inlineHelpText>Product lookup that represents the Kit part number</inlineHelpText>
        <label>Kit Part</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Kit Products</relationshipLabel>
        <relationshipName>Kit_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PT_Kit_Revision_Code__c</fullName>
        <description>Value that represents the revision of the Kit product so that multiple versions (sets of component parts) can be represented in a kit.</description>
        <inlineHelpText>Value that represents the revision of the Kit product so that multiple versions (sets of component parts) can be represented in a kit.</inlineHelpText>
        <label>Kit Revision Code</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Kit Products</label>
    <nameField>
        <displayFormat>KP{00000000}</displayFormat>
        <label>Kit Products Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Kit Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>